<resources>
    <string name="app_name" translatable="false">SimpleDo</string>
    <string name="add_entry">Add</string>
    <string name="steven_solleder" translatable="false">Steven Solleder</string>
    <string name="isabell_waas" translatable="false">Isabell Waas</string>
    <string name="imprint">Imprint</string>
    <string name="change_sort_direction">Change sort direction</string>
    <string name="change_sort_criterion">Change sort criterion</string>
    <string name="settings">Settings</string>
    <string name="start">Create entry</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="allday_reminder_time">Allday events reminder</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="set_color">Set color</string>
    <string name="set_notification">Toggle notification</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="edit_text">Edit text</string>
    <string name="edit_date">Edit date</string>
    <string name="edit_time">Edit time</string>
    <string name="edit_color">Edit color</string>
    <string name="activate_notification">Activate notification</string>
    <string name="deactivate_notification">Deactivate notification</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="version">Version 2020.1</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="entry_deleted">Your entry has been deleted</string>
    <string name="entry_in_past">Your entry is in the past</string>
    <string name="cancel">Cancel</string>
    <string name="reminders">Reminders</string>
    <string name="reminders_description">The reminders you set for your entries</string>
    <string name="imprint_description">
        &lt;b>According to § 5 TMG:&lt;/b>&lt;br/>
        Name: Steven Solleder&lt;br/>
        Address: Upon request&lt;br/>
        Contact: contact@stevensolleder.de&lt;br/>&lt;br/>
        &lt;b>Additional information according to § 18 Abs. 2 MStV:&lt;/b>&lt;br/>
        Responsible for the content: Steven Solleder&lt;br/>
        Address: Upon request
    </string>
    <string name="ok" translatable="false">Ok</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="battery_optimization_description">Please select \"All Apps\", search for \"SimpleDo\" and deactivate \"battery optimization\" in order to make sure that the app\'s notifcations work properly.</string>
</resources>