<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="550dp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:id="@+id/root_developer_activity">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/deadlineText"
            android:textSize="12dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/version" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/steven_solleder"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-4dp"
            android:text="@string/steven_solleder"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/isabell_waas"
            android:id="@+id/isabellwaas"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/imprint"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/imprint" />

        <com.google.android.material.button.MaterialButton
            android:clickable="true"
            android:id="@+id/opensource"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="opensource"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="center"
            android:text="@string/open_source_licenses" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>